--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -383,10 +383,11 @@ ul li {
     Typography
 ============= */
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Mr Eaves Mod OT; sans serif"
 }
 
 h1, h2, h3, h4 {
+  font-family: "OhNo Blazeface; serif"
   margin: 0;
   padding: 0;
 }
