--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -5,8 +5,8 @@ button {
     cursor: pointer;
 }
 
-.yellow-button {
-    background-color: $electricYellow;
+.button {
+    background-color: #175E2E;
     border: none;
     font-size: rem-calc(16);
     font-weight: 600;
@@ -14,7 +14,7 @@ button {
     transition: 0.25s;
 
     &:hover {
-        background-color: $black;
-        color: $white;
+        background-color: #fff;
+        color: #175E2E;
     }
 }
