--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -1,5 +1,5 @@
 #section-1 {
     display: grid;
-    grid-template-columns: 16px auto 16px
-    grid-template-areas;
+    grid-template-columns: 16px auto 
+    grid-template-areas; 
 }
