--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -2,10 +2,11 @@
     Typography
 ============= */
 body{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Mr Eaves Mod OT', sans-serif;
 }
 
 h1,h2,h3,h4{
+    font-family: 'OhNo Blazeface';
     margin: 0;
     padding: 0;
 }
