--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
     Footer
 ============= */
 footer {
-	background-color: $nightDark;
+	background-color: #fff;
 	color: $alpineFrostDark;
 	padding: 16px;
 
