--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -1,5 +1,9 @@
 #section-1 {
-    display: grid;
-    grid-template-columns: 16px auto 
-    grid-template-areas; 
+	>div {
+		img {
+			display: block;
+			width: 100%;
+		}
+		
+	}
 }
