--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -1,28 +1,26 @@
-#section-2 {
+    #section-2 {
 
-	>div {
-
-		ul {
-			display: grid;
-			gap: 16px;
-
-			li {
-
-
-				// aside {
-				// 	margin-left: auto;
-				// 	div {
-				// 		background-position: center;
-				// 		background-size: cover;
-				// 		border: 4px $white solid;
-				// 		border-radius: 100%;
-				// 		height: 85px;
-				// 		width: 85px;
-
-				// 		@include md{
-				// 			height: 113px;
-				// 			width: 113px;
-			}
-		}
-	}
-}
+        >div {
+    
+            ul {
+                display: grid;
+                gap: 16px;
+                    // aside {
+                    // 	margin-left: auto;
+                    // 	div {
+                    // 		background-position: center;
+                    // 		background-size: cover;
+                    // 		border: 4px $white solid;
+                    // 		border-radius: 100%;
+                    // 		height: 85px;
+                    // 		width: 85px;
+    
+                    // 		@include md{
+                    // 			height: 113px;
+                    // 			width: 113px;
+                    // 		}
+                    // 	}
+                }
+            }
+        }
+    
