--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -14,7 +14,11 @@ header {
 		@include xl {
 			grid-area: header;
 		}
-
+		h1 {
+			font-family: ohno-blazeface, sans-serif;
+			font-weight: 100;
+			font-style: normal;
+		}
 		section {
 			padding: 15px;
 
