--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -1,7 +1,10 @@
 #section-3 {
-
+h1 {
+	font-family: ohno-blazeface, sans-serif;
+	font-weight: 100;
+	font-style: normal;
+}
 	>div {
-
 
 		ul {
 			display: grid;
@@ -43,4 +46,15 @@
 			}
 		}
 	}
+}
+#SnakePlant, #Peperomia, #Monstera, #Succulents, #Alocasia
+h1 {
+	font-family: ohno-blazeface, sans-serif;
+	font-weight: 100;
+	font-style: normal;
+}
+body {
+	font-family: mr-eaves-modern, sans-serif;
+	font-weight: 400;
+	font-style: normal;
 }
