--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -12,3 +12,13 @@ footer {
 		grid-template-columns: auto 1200px auto;
 	}
 }
+h1, h2 {
+	font-family: ohno-blazeface, sans-serif;
+    font-weight: 100;
+    font-style: normal;
+}
+body {
+	font-family: mr-eaves-modern, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
