--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -17,7 +17,7 @@ h1, h2 {
     font-weight: 100;
     font-style: normal;
 }
-body {
+#ConnecticutBody, #nova, #MassBody {
 	font-family: mr-eaves-modern, sans-serif;
     font-weight: 400;
     font-style: normal;
