--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -2,7 +2,7 @@
     Header
 ============= */
 header {
-	background-color: #fff;
+	background-color: #DAA7D9;
 	display: grid;
 
 	@include xl {
@@ -18,6 +18,7 @@ header {
 			font-family: ohno-blazeface, sans-serif;
 			font-weight: 100;
 			font-style: normal;
+			color: #fff
 		}
 		section {
 			padding: 15px;
