--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -1,15 +1,8 @@
-/* =============
-    Header
-============= */
 header {
 	background-color: #DAA7D9;
-	display: grid;
-
-	@include xl {
-		grid-template-areas: ". header .";
-		grid-template-columns: auto 1200px auto;
-	}
-
+	color: #fff
+	display; grid
+	
 	>div {
 		@include xl {
 			grid-area: header;
