--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -1,8 +1,10 @@
 #section-3 {
+	background-color: #fff;
 h1 {
 	font-family: ohno-blazeface, sans-serif;
 	font-weight: 100;
 	font-style: normal;
+	color: #175E2E;
 }
 	>div {
 
@@ -52,9 +54,14 @@ h1 {
 	font-family: ohno-blazeface, sans-serif;
 	font-weight: 100;
 	font-style: normal;
+	font-size: 27;
+	background-color: #F2DF8E ;
+	color: #175E2E
 }
-body {
+p{
 	font-family: mr-eaves-modern, sans-serif;
 	font-weight: 400;
 	font-style: normal;
+	background-color: #F2DF8E ;
+	color: #175E2E
 }
