--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -23,13 +23,17 @@
 }
 #button1, #button2 {
 	h1 {
-		font-family: ohno-blazeface, sans-serif;
+	font-family: ohno-blazeface, sans-serif;
     font-weight: 100;
     font-style: normal;
+	background-color: #DAA7D9;
+	color: #fff;
 	}
 	button {
-		font-family: mr-eaves-modern, sans-serif;
+	font-family: mr-eaves-modern, sans-serif;
     font-weight: 400;
     font-style: normal;
+	background-color: #175E2E;
+	color: #fff;
 	}
 }
