--- a/dev/scss/sections/_section-3.scss
+++ b/dev/scss/sections/_section-3.scss
@@ -49,19 +49,109 @@ h1 {
 		}
 	}
 }
-#SnakePlant, #Peperomia, #Monstera, #Succulents, #Alocasia
-h1 {
-	font-family: ohno-blazeface, sans-serif;
-	font-weight: 100;
-	font-style: normal;
-	font-size: 27;
-	background-color: #F2DF8E ;
-	color: #175E2E
+
+#Snake {
+	h1 {
+		font-family: ohno-blazeface, sans-serif;
+		font-weight: 100;
+		font-style: normal;
+		font-size: 27;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	p{
+		font-family: mr-eaves-modern, sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	button{
+		color: #fff;
+		background-color: #175E2E;
+	}
 }
-p{
-	font-family: mr-eaves-modern, sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	background-color: #F2DF8E ;
-	color: #175E2E
+#Peperomia {
+	h1 {
+		font-family: ohno-blazeface, sans-serif;
+		font-weight: 100;
+		font-style: normal;
+		font-size: 27;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	p{
+		font-family: mr-eaves-modern, sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	button{
+		color: #fff;
+		background-color: #175E2E;
+	}
+}
+#Succulent {
+	h1 {
+		font-family: ohno-blazeface, sans-serif;
+		font-weight: 100;
+		font-style: normal;
+		font-size: 27;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	p{
+		font-family: mr-eaves-modern, sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	button{
+		color: #fff;
+		background-color: #175E2E;
+	}
+}
+#Alocasia {
+	h1 {
+		font-family: ohno-blazeface, sans-serif;
+		font-weight: 100;
+		font-style: normal;
+		font-size: 27;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	p{
+		font-family: mr-eaves-modern, sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	button{
+		color: #fff;
+		background-color: #175E2E;
+	}
+}
+#Monstera {
+	h1 {
+		font-family: ohno-blazeface, sans-serif;
+		font-weight: 100;
+		font-style: normal;
+		font-size: 27;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	p{
+		font-family: mr-eaves-modern, sans-serif;
+		font-weight: 400;
+		font-style: normal;
+		background-color: #F2DF8E ;
+		color: #175E2E
+	}
+	button{
+		color: #fff;
+		background-color: #175E2E;
+	}
 }
