--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
 // Helpers Styles
-@import "helpers/_mixins";
+@import "helpers/_mixins"; 
 @import "helpers/_variables";
 
 // Base Styles
@@ -19,4 +19,6 @@
 @import "layout/_footer";
 
 // Sections Styles
-@import "section/_section-1";
+@import "sections/_section-1";
+@import "sections/_section-2";
+@import "sections/_section-3";
